alignment fixes

--- a/index.css
+++ b/index.css
@@ -144,4 +144,8 @@ main {
         grid-template-areas: "bgimg" "content";
     }
 
+    .content{
+        gap: 10px;
+    }
+
 }
